--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,14 @@
 		    <artifactId>tomcat-embed-jasper</artifactId>
 		</dependency>
 		
+		<!-- https://mvnrepository.com/artifact/jstl/jstl -->
+		<dependency>
+		    <groupId>jstl</groupId>
+		    <artifactId>jstl</artifactId>
+		    <version>1.2</version>
+		</dependency>
+		
+		
 	
 	</dependencies>
 
