--- a/pom.xml
+++ b/pom.xml
@@ -56,7 +56,13 @@
 		    <artifactId>tomcat-embed-jasper</artifactId>
 		</dependency>
 		
-	
+		<!-- https://mvnrepository.com/artifact/jstl/jstl -->
+		<dependency>
+    		<groupId>jstl</groupId>
+    		<artifactId>jstl</artifactId>
+    		<version>1.2</version>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
